[package]
name = "lepton_image"
version = "1.1.1"
edition = "2024"
authors = ["The Lepton3 Contributors"]

description = "The Lepton3 image format and parsing"
readme = "README.md"

repository = "https://github.com/duplessisaurore/lepton3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]
lepton_opcodes = { workspace = true }

[features]
default = ["parser", "validator", "writer"]

parser = []
validator = []
writer = []