[package]
name = "lepton_opcodes"
version = "1.1.0"
edition = "2024"
authors = ["The Lepton3 Contributors"]

description = "The Lepton3 virtual machine's opcodes"
readme = "README.md"

repository = "https://github.com/duplessisaurore/lepton3"
license = "AGPLv3"

keywords = ["languages", "scripting", "script"]

[dependencies]